minima de cambios

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,6 +14,45 @@
         android:theme="@style/Theme.HoneyOnix"
         tools:targetApi="31">
         <activity
+            android:name=".AgregarProductoActivity"
+            android:exported="false" />
+        <activity
+            android:name=".Producto.AgregarProductoActivity"
+            android:exported="false" />
+        <activity
+            android:name=".iu.Make"
+            android:exported="false" />
+        <activity
+            android:name=".Firebase.FirestoreConstans"
+            android:exported="false" />
+        <activity
+            android:name=".Firebase.FirebaseFirestore"
+            android:exported="false" />
+        <activity
+            android:name=".Firebase.FirestoreInstance"
+            android:exported="false" />
+        <activity
+            android:name=".Base.fire"
+            android:exported="false" />
+        <activity
+            android:name=".iu.Stador"
+            android:exported="false" />
+        <activity
+            android:name=".adapter.ProductAdapter"
+            android:exported="false" />
+        <activity
+            android:name=".Model.ProductModel"
+            android:exported="false" />
+        <activity
+            android:name=".producto.ProductActivity"
+            android:exported="false" />
+        <activity
+            android:name=".CatalogoClienteActivity"
+            android:exported="false" />
+        <activity
+            android:name=".RegistroAdminActivity"
+            android:exported="false" />
+        <activity
             android:name=".RegitroAdminActivity"
             android:exported="false" />
         <activity
@@ -29,7 +68,7 @@
             android:name=".PagoActivity"
             android:exported="false" />
         <activity
-            android:name=".RegistarProductoActivity"
+            android:name=".producto.RegistarProductoActivity"
             android:exported="false" />
         <activity
             android:name=".PerfilAdminActivity"
