--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,6 +15,15 @@
         android:theme="@style/Theme.HoneyOnix"
         tools:targetApi="31">
         <activity
+            android:name=".ListaActivity"
+            android:exported="false" />
+        <activity
+            android:name=".MostrarProduct"
+            android:exported="false" />
+        <activity
+            android:name=".RecycleView"
+            android:exported="false" />
+        <activity
             android:name=".ImagenAdapter"
             android:exported="false" />
         <activity
